# DecodingUsTools

./: .gitignore  Cargo.toml  README.md  build.rs
docs/examples/: summary.html
src/: bam_fixer.rs  cli.rs  lib.rs  main.rs  tree.rs  types.rs
src/api/: coverage.rs  mod.rs
src/callable_loci/: mod.rs  options.rs  report.rs  types.rs
src/callable_loci/profilers/: bam_stats.rs  callable_profiler.rs  contig_profiler.rs  coverage_profiler.rs  mod.rs  platform_inference.rs
src/callable_loci/templates/: report_footer.html  report_header.html
src/callable_loci/utils/: histogram_plotter.rs  mod.rs  natural_sort.rs
src/commands/: Region.rs  coverage.rs  find_branch.rs  find_mt_branch.rs  find_y_branch.rs  fingerprint.rs  graph_coverage.rs  mod.rs  region.rs  y_branch.rs
src/config/: config.rs
src/export/: mod.rs
src/export/formats/: coverage.rs  fingerprint.rs  haplogroup.rs  mod.rs
src/export/pds/: mod.rs
src/graph_coverage/: coverage.rs  mod.rs  types.rs
src/haplogroup/: caller.rs  mod.rs  scoring.rs  tree.rs  types.rs  validation.rs
src/sequence_processor/: base_processor.rs  mod.rs  threading.rs
src/sequence_processor/collectors/: base.rs  mod.rs
src/sequence_processor/core/: mod.rs  processor.rs  reader.rs  sequence.rs  stats.rs
src/utils/: bam_reader.rs  cache.rs  external_tools.rs  histogram_plotter.rs  liftover.rs  mod.rs  progress_bar_builder.rs  progress_manager.rs  sequence_processor.rs
src/vg/: framing.rs  gam.rs  mod.rs
tests/: chm13_y_ftdna.rs  liftover_y_l21.rs  liftover_y_m526.rs  test_liftover.rs  y_l21_call.rs
(+14 files in other folders)
