[package]
name = "decodingus-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.49.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
chrono = "0.4"
directories = "6.0.0"
