[package]
name = "decodingus-tools"
version = "0.1.1"
edition = "2021"

[lib]
name = "decoding_us_tools"
path = "src/lib.rs"

[[bin]]
name = "decoding-us-tools"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.49.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
chrono = "0.4"
directories = "6.0.0"
bio = "2.2.0"
anyhow = "1.0.98"
crossbeam-channel = "0.5"
toml = "0.8.23"
tempfile = "3.10.1"
sha2 = "0.10"
seahash = "4.1"
niffler = "2.3"
protobuf = "3.4"
thiserror = "1.0.69"
tokio = "1.45.0"

[features]
default = ["cli"]
cli = []

[build-dependencies]
protobuf-codegen = "3.4"


